@@ -201,6 +201,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #26323: Add Mock.assert_called() and Mock.assert_called_once()
+  methods to unittest.mock. Patch written by Amit Saha.
+
 - Issue #20589: Invoking Path.owner() and Path.group() on Windows now raise
   NotImplementedError instead of ImportError.
 
